--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@
     padding-top: 30px;
 }
 /* About image */
-.about-us .imgcontanner{
+.about-us .imgccontainer{
     width: 50%;
     position: relative;
     background-color: blue;
@@ -146,7 +146,7 @@
     
     
 }
-.about-us .imgcontanner .aboutimg {
+.about-us .imgccontainer .aboutimg {
     position: absolute; 
     background: url('https://images.unsplash.com/photo-1630959302878-a30de73cdbb5?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MnwxfDB8MXxyYW5kb218MHx8Y2FuY2VyfHx8fHx8MTYzOTc1MzM4MQ&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1600');
     background-repeat: no-repeat;
@@ -274,7 +274,7 @@
 
 
 /* ***************************************  Counter ************************** */
-.contercontent {
+.countercontent {
     width: 100%;
     box-sizing: border-box;
     display: flex;
@@ -285,7 +285,7 @@
     width: 100%;
     height: 370px;
 }
-.contercontent .one {
+.countercontent .one {
     background-color: rgb(1, 99, 1);
 }
 .counterbox .information {
@@ -325,17 +325,17 @@
     color: white;
     text-align: center;
 }
-.contactcontanner {
+.contactccontainer {
     width: 70%;
     margin: 0 auto;
     box-sizing: border-box;
     display: flex;
     align-items: center;
 }
-.contactcontanner .contanner {
+.contactccontainer .ccontainer {
     width: 40%;
 }
-.contactcontanner .contanner .heading {
+.contactccontainer .ccontainer .heading {
     width: 100%;
     display: flex;
     align-items: center;
@@ -409,3 +409,4 @@ footer {
 footer p {
     font-size: 18px;
 }
+
